[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Santa.gd" type="Script" id=1]
[ext_resource path="res://Santa.glb" type="PackedScene" id=2]
[ext_resource path="res://scenes/Detector.tscn" type="PackedScene" id=4]
[ext_resource path="res://Talker.tscn" type="PackedScene" id=5]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=6]

[sub_resource type="CylinderShape" id=1]
height = 0.870956
radius = 0.233753

[node name="Enemy" type="KinematicBody" groups=["enemy"]]
script = ExtResource( 1 )

[node name="Pivot" type="Spatial" parent="."]

[node name="Santa" parent="Pivot" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.24127e-05, 0.411167, 0 )
shape = SubResource( 1 )

[node name="Navigator" type="NavigationAgent" parent="."]
avoidance_enabled = true
max_speed = 7.0

[node name="Detector" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 1024
collision_mask = 2048

[node name="Talker" parent="." instance=ExtResource( 5 )]
visible = false

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.783315, 0 )

[node name="RadialProgressBar" parent="HealthBar/Viewport" index="0"]
bar_color = Color( 0, 0.0156863, 1, 0.784314 )

[connection signal="area_entered" from="Detector" to="." method="_on_Detector_area_entered"]
[connection signal="area_exited" from="Detector" to="." method="_on_Detector_area_exited"]
[connection signal="area_entered" from="Talker" to="." method="_on_Talker_area_entered"]
[connection signal="area_exited" from="Talker" to="." method="_on_Talker_area_exited"]

[editable path="Pivot/Santa"]
[editable path="Detector"]
[editable path="HealthBar"]
